--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,5 +12,5 @@ main {
     width: 500px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgba(red, green, blue, alpha);
+    box-shadow: 3px 3px 5px rgba(red, rgb(128, 0, 111), blue, alpha);
 }
